# student-performance-intelligence-system

./: .gitignore  .replit  README.md  pyproject.toml
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/student-dashboard/: app.py
artifacts/student-dashboard/.replit-artifact/: artifact.edit.toml
artifacts/student-dashboard/.streamlit/: config.toml
attached_assets/: Pasted-Build-on-my-EXISTING-Streamlit-Student-Performance-Inte_1778561325224.txt
streamlit-app/: README.md  app.py  requirements.txt
streamlit-app/.replit-artifact/: artifact.edit.toml
