[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai==0.4.1",
    "kaleido==0.2.1",
    "numpy==1.26.4",
    "pandas==2.2.1",
    "plotly==5.20.0",
    "reportlab==4.1.0",
    "scikit-learn==1.4.1.post1",
    "streamlit==1.32.0",
]
